--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -11,3 +11,14 @@ font-size: 20px;
 margin-bottom: 10px;
 color:blue;
 }
+.avatar{
+  width: 200px;
+  border-radius: 30%;
+}
+.text{
+  font-size: medium;
+  color:black;
+}
+h1{
+  justify-items: center;
+}
